--- a/views/create.edge
+++ b/views/create.edge
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8 offser-md-2">
-      <form action="">
+      <form action="/posts/store" method="POST">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label for="">Title</label>
