--- a/views/create.edge
+++ b/views/create.edge
@@ -27,7 +27,7 @@
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Discription</label>
-            <input type="text" name="Discription" placeholder="Description" class="form-control">
+            <input type="text" name="description" placeholder="Description" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Content</label>
