--- a/views/create.edge
+++ b/views/create.edge
@@ -22,6 +22,10 @@
       <form action="/posts/store" method="POST">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
+            <label for="">Username</label>
+            <input type="text" name="username" placeholder="Username" class="form-control">
+          </div>
+          <div class="form-group floating-label-form-group controls">
             <label for="">Title</label>
             <input type="text" name="title" placeholder="Titel" class="form-control">
           </div>
