--- a/views/create.edge
+++ b/views/create.edge
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8 offser-md-2">
-      <form action="/posts/store" method="POST">
+      <form action="/posts/store" method="POST" enctype="multipart/form-data">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label for="">Username</label>
@@ -30,12 +30,15 @@
             <input type="text" name="title" placeholder="Titel" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
-            <label for="">Discription</label>
-            <input type="text" name="description" placeholder="Description" class="form-control">
+            <label for="">Subtitle</label>
+            <input type="text" name="subtitle" placeholder="Subtitle" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Content</label>
             <textarea name="content" placeholder="Content" cols="30" rows="10" class="form-control"></textarea>
+          </div>
+          <div class="form-group mt-5">
+            <input type="file" name="image" class="form-control-file" />
           </div>
         </div>
         <div class="form-group my-4 text-center">
