--- a/views/index.edge
+++ b/views/index.edge
@@ -23,7 +23,7 @@
             <div class="post-preview">
                 <a href="/post/{{post._id}}">
                     <h2 class="post-title">{{post.title}}</h2>
-                    <h3 class="post-subtitle">{{post.description}}</h3>
+                    <h3 class="post-subtitle">{{post.subtitle}}</h3>
                 </a>
                 <p class="post-meta">
                     Posted by
