--- a/views/register.edge
+++ b/views/register.edge
@@ -7,7 +7,7 @@
       <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
               <div class="page-heading">
-                  <h1>New Post</h1>
+                  <h1>Create A New Account</h1>
               </div>
           </div>
       </div>
@@ -18,30 +18,23 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8 offser-md-2">
-      <form action="/posts/store" method="POST" enctype="multipart/form-data">
+      <form action="/users/register" method="POST" enctype="multipart/form-data">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label for="">Username</label>
             <input type="text" name="username" placeholder="Username" class="form-control">
           </div>
           <div class="form-group floating-label-form-group controls">
-            <label for="">Title</label>
-            <input type="text" name="title" placeholder="Titel" class="form-control">
+            <label for="">Email</label>
+            <input type="email" name="email" placeholder="Email" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
-            <label for="">Subtitle</label>
-            <input type="text" name="subtitle" placeholder="Subtitle" class="form-control">
-          </div>
-          <div class="form-group floating-label-form-group contorols">
-            <label for="">Content</label>
-            <textarea name="content" placeholder="Content" cols="30" rows="10" class="form-control"></textarea>
-          </div>
-          <div class="form-group mt-5">
-            <input type="file" name="image" class="form-control-file" />
+            <label for="">Password</label>
+            <input type="password" name="password" placeholder="Password" class="form-control">
           </div>
         </div>
         <div class="form-group my-4 text-center">
-          <button class="btn btn-primary">Create Post</button>
+          <button class="btn btn-primary">Register now</button>
         </div>
       </form>
     </div>
