--- a/views/register.edge
+++ b/views/register.edge
@@ -19,7 +19,7 @@
   <div class="row justify-content-center">
     <div class="col-md-8 offser-md-2">
       {{--  이거는 multipart/form-data로 보내면 req.body가 빈다.  --}}
-      <form action="/users/register" method="POST" enctype="application/json">
+      <form action="/users/store" method="POST" enctype="application/json">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label for="">Username</label>
