--- a/views/create.edge
+++ b/views/create.edge
@@ -18,7 +18,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8 offser-md-2">
-      <form action="/posts/store" method="POST" enctype="multipart/form-data">
+      <form action="/posts/create" method="POST" enctype="multipart/form-data">
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label for="">Username</label>
