--- a/views/register.edge
+++ b/views/register.edge
@@ -30,11 +30,11 @@
         <div class="control-group">
           <div class="form-group floating-label-form-group controls">
             <label for="">Username</label>
-            <input type="text" name="username" placeholder="Username" class="form-control">
+            <input type="text" name="username" value="{{data.username || ''}}" placeholder="Username" class="form-control">
           </div>
           <div class="form-group floating-label-form-group controls">
             <label for="">Email</label>
-            <input type="email" name="email" placeholder="Email" class="form-control">
+            <input type="email" name="email" value="{{data.email || ''}}" placeholder="Email" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Password</label>
