--- a/views/create.edge
+++ b/views/create.edge
@@ -18,6 +18,13 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8 offser-md-2">
+      @if(errors.length > 0)
+        <ul class="list-group">
+          @each(error in errors)
+            <li class="list-group-item text-danger">{{error}}</li>
+          @endeach
+        </ul>
+      @endif
       <form action="/posts/create" method="POST" enctype="multipart/form-data">
         <div class="control-group">
           <div class="form-group">
@@ -26,15 +33,15 @@
           <input type="hidden" name="userId" value="{{user._id}}" class="form-control">
           <div class="form-group floating-label-form-group controls">
             <label for="">Title</label>
-            <input type="text" name="title" placeholder="Titel" class="form-control">
+            <input type="text" name="title" value="{{data.title || ''}}" placeholder="Titel" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Subtitle</label>
-            <input type="text" name="subtitle" placeholder="Subtitle" class="form-control">
+            <input type="text" name="subtitle" value="{{data.subtitle || ''}}" placeholder="Subtitle" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Content</label>
-            <textarea name="content" placeholder="Content" cols="30" rows="10" class="form-control"></textarea>
+            <textarea name="content" placeholder="Content" value="{{data.content || ''}}" cols="30" rows="10" class="form-control"></textarea>
           </div>
           <div class="form-group mt-5">
             <input type="file" name="image" class="form-control-file" />
