--- a/views/post.edge
+++ b/views/post.edge
@@ -27,6 +27,12 @@
              {{post.content}}
           </div>
       </div>
+      <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-3 col-lg-3 col-xl-3 ms-auto">
+            <a class="btn btn-dark btn-sm" href="/posts/update/{{post._id}}">수정하기</a>
+            <button class="btn btn-dark btn-sm m-1">삭제하기</button>
+        </div>
+      </div>
   </div>
 </article>
 @endsection
