--- a/views/update.edge
+++ b/views/update.edge
@@ -7,7 +7,7 @@
       <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
               <div class="page-heading">
-                  <h1>New Post</h1>
+                  <h1>Update Post</h1>
               </div>
           </div>
       </div>
@@ -25,7 +25,7 @@
           @endeach
         </ul>
       @endif
-      <form action="/posts/create" method="POST" enctype="multipart/form-data">
+      <form action="/posts/update/{{post.id}}" method="POST" enctype="multipart/form-data">
         <div class="control-group">
           <div class="form-group">
             <input type="hidden" name="username" value="{{user.username}}" class="form-control">
@@ -33,7 +33,7 @@
           <input type="hidden" name="userId" value="{{user._id}}" class="form-control">
           <div class="form-group floating-label-form-group controls">
             <label for="">Title</label>
-            <input type="text" name="title" value="{{post.title || ''}}" placeholder="Titel" class="form-control">
+            <input type="text" name="title" value="{{post.title || ''}}" placeholder="Title" class="form-control">
           </div>
           <div class="form-group floating-label-form-group contorols">
             <label for="">Subtitle</label>
