--- a/views/post.edge
+++ b/views/post.edge
@@ -27,12 +27,14 @@
              {{post.content}}
           </div>
       </div>
+      @if(user.isAdmin)
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-3 col-lg-3 col-xl-3 ms-auto">
             <a class="btn btn-dark btn-sm" href="/posts/update/{{post._id}}">수정하기</a>
-            <button class="btn btn-dark btn-sm m-1">삭제하기</button>
+            <a class="btn btn-dark btn-sm m-1" href="/posts/delete/{{post._id}}">삭제하기</a>
         </div>
       </div>
+      @endif
   </div>
 </article>
 @endsection
