검색기능 구현중

--- a/views/index.edge
+++ b/views/index.edge
@@ -20,8 +20,8 @@
         <div class="col-md-10 col-lg-8 col-xl-7 ms-auto">
             <nav class="navbar navbar-light ">
                 <div class="container-fluid justify-content-end">
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="d-flex" action="/search" method="GET">
+                        <input class="form-control me-2" type="text" name="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
