--- a/views/index.edge
+++ b/views/index.edge
@@ -45,6 +45,14 @@
             <!-- Pager-->
             <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
         </div>
+        <div class="col-md-1 col-lg-2 col-xl-3">
+            <h4 style="text-align: center">태그</h4>
+            @each(post in posts)
+            <p class="post-meta">
+                {{post.category}}
+            </p>
+            @endeach
+        </div>
     </div>
 </div>
 @endsection
