--- a/views/create.edge
+++ b/views/create.edge
@@ -27,14 +27,17 @@
       @endif
       <form action="/posts/create" method="POST" enctype="multipart/form-data">
         <div class="control-group">
-          <div class="form-group">
-            <input type="hidden" name="username" value="{{user.username}}" class="form-control">
-          </div>
+          <input type="hidden" name="username" value="{{user.username}}" class="form-control">
           <input type="hidden" name="userId" value="{{user._id}}" class="form-control">
           <div class="form-group floating-label-form-group controls">
             <label for="">Title</label>
             <input type="text" name="title" value="{{data.title || ''}}" placeholder="Titel" class="form-control">
           </div>
+          {{--  @each(category in categories)
+          <div class="form-group floating-label-form-group controls">
+            <label><input type="checkbox" name="category" value="{{category.category}}" style="display:none">{{category.category}}</label>
+          </div>
+          @endeach  --}}
           <div class="form-group floating-label-form-group contorols">
             <label for="">Content</label>
             <textarea name="content" placeholder="Content" value="{{data.content || ''}}" cols="30" rows="10" class="form-control"></textarea>
