--- a/views/post.edge
+++ b/views/post.edge
@@ -49,8 +49,8 @@
 <div class="card bg-light">
     <div class="card-body">
         <!-- Comment form-->
-        <form class="mb-4" action="/comments/create" method="POST" enctype="application/json">
-            <textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
+        <form class="mb-4" action="/comments/create/{{post._id}}" method="POST" enctype="application/json">
+            <textarea class="form-control" name="text" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
             <div class="form-group my-2 text-end">
                 <button class="btn btn-dark btn-sm">댓글등록</button>
             </div>
@@ -58,13 +58,17 @@
         <!-- Comment with nested comments-->
         <div class="d-flex mb-4">
             <!-- Parent comment-->
-            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."></div>
+            <div class="flex-shrink-0">
+                <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="...">
+            </div>
             <div class="ms-3">
                 <div class="fw-bold">Commenter Name</div>
                 If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
                 <!-- Child comment 1-->
                 <div class="d-flex mt-4">
-                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."></div>
+                    <div class="flex-shrink-0">
+                        <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="...">
+                    </div>
                     <div class="ms-3">
                         <div class="fw-bold">Commenter Name</div>
                         And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
@@ -81,13 +85,17 @@
             </div>
         </div>
         <!-- Single comment-->
+        @each(comment in comments)
         <div class="d-flex">
-            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..."></div>
+            <div class="flex-shrink-0">
+                <img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="...">
+            </div>
             <div class="ms-3">
-                <div class="fw-bold">Commenter Name</div>
-                When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
+                <div class="fw-bold">{{comment.author.username}}</div>
+                {{comment.text}}
             </div>
         </div>
+        @endeach
     </div>
 </div>
         </div>
